Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-81302

WheelHandler wheel signal is not documented

XMLWordPrintable

    • All
    • 96cf8a33c3c2fa8a3e010e33c37462e3a703fe3d (qt/qtdeclarative/5.14)

      By looking at https://doc.qt.io/qt-5/qml-qtquick-wheelhandler.html one can guess that there's a wheel signal since onWheel is mentioned twice, but looking at the signals list it's not there.

       

      It would be nice if it was documented

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            srutledg Shawn Rutledge
            tsdgeos_kdab Albert Astals Cid
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: