Register PointerScrollEvent and document the WheelHandler.wheel signal

Writing an onWheel() handler script was working and mentioned briefly
in docs; but PointerScrollEvent and the signal were not documented.

Also fixed the type of QtQuick::WheelEvent::inverted: bool not int.

Fixes: QTBUG-81302
Change-Id: I31342955c42e20ff52460a1b7ee95da325e38af6
Reviewed-by: Jan Arve Sæther <jan-arve.saether@qt.io>